# pdf-editor

./: .gitignore  README.md  flet_build_log.txt  main.py  nuitka-crash-report.xml  pyproject.toml
gui/: __init__.py  main.py
src/: output_paths.py  pdf_input.py  pdf_merge.py  pdf_split.py  pdf_to_img.py  platform_utils.py
src/gui/: __init__.py  app.py  pdf_drop_field.py
tests/: test_gui_build.py  test_output_paths.py  test_pdf_drop_field.py  test_pdf_input.py  test_pdf_input_integration.py
